--- a/src/assets/components/Header/Header.css
+++ b/src/assets/components/Header/Header.css
@@ -2,32 +2,29 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  padding: 32px 0 28px;
 }
 
 .header__logo {
-  width: 64px;
-  height: 42px;
+  margin-right: 24px;
 }
 
 .header__date-and-location {
-  font-size: 16px;
+  margin: 0;
 }
 
 .header__add-clothes-btn {
-  margin-top: 10px;
-  padding: 5px 10px;
-  font-size: 14px;
+  margin: 0 20px 0 auto;
 }
 
 .header__user-container {
   display: flex;
   align-items: center;
+  gap: 12px;
 }
 
 .header__username {
-  margin-right: 10px;
-  font-size: 16px;
+  margin: 0;
 }
 
 .header__avatar {
