--- a/src/assets/components/Main/Main.css
+++ b/src/assets/components/Main/Main.css
@@ -2,7 +2,11 @@
   padding: 20px;
 }
 
-.item-list {
-  list-style: none;
+.cards__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
   padding: 0;
+  list-style-type: none;
+  gap: 21px;
 }
