--- a/src/assets/components/ItemCard/ItemCard.css
+++ b/src/assets/components/ItemCard/ItemCard.css
@@ -1,17 +1,16 @@
-.item-card {
-  border: 1px solid #ccc;
-  padding: 10px;
-  border-radius: 5px;
-  text-align: center;
-  margin: 10px;
+.card {
+  width: 323px;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
-.item-card__image {
-  max-width: 100%;
-  height: auto;
+.card__name {
+  position: absolute;
+  top: 15px;
+  margin: 0;
 }
 
-.item-card__title {
-  text-align: center;
-  margin: 10px 0 0;
+.card__image {
+  width: 100%;
 }
